Update Helm release nginx-ingress to v0.12.1

--- a/charts/nginx-ingress/templates/controller-deployment.yaml
+++ b/charts/nginx-ingress/templates/controller-deployment.yaml
@@ -103,6 +103,13 @@ spec:
           - -nginx-plus={{ .Values.controller.nginxplus }}
           - -nginx-reload-timeout={{ .Values.controller.nginxReloadTimeout }}
           - -enable-app-protect={{ .Values.controller.appprotect.enable }}
+          - -enable-app-protect-dos={{ .Values.controller.appprotectdos.enable }}
+{{- if .Values.controller.appprotectdos.enable }}
+          - -app-protect-dos-debug={{ .Values.controller.appprotectdos.debug }}
+          - -app-protect-dos-max-daemons={{ .Values.controller.appprotectdos.maxWorkers }}
+          - -app-protect-dos-max-workers={{ .Values.controller.appprotectdos.maxDaemons }}
+          - -app-protect-dos-memory={{ .Values.controller.appprotectdos.memory }}
+{{ end }}
           - -nginx-configmaps=$(POD_NAMESPACE)/{{ include "nginx-ingress.configName" . }}
 {{- if .Values.controller.defaultTLS.secret }}
           - -default-server-tls-secret={{ .Values.controller.defaultTLS.secret }}
@@ -143,9 +150,9 @@ spec:
           - -prometheus-metrics-listen-port={{ .Values.prometheus.port }}
           - -prometheus-tls-secret={{ .Values.prometheus.secret }}
           - -enable-custom-resources={{ .Values.controller.enableCustomResources }}
+          - -enable-snippets={{ .Values.controller.enableSnippets }}
 {{- if .Values.controller.enableCustomResources }}
           - -enable-tls-passthrough={{ .Values.controller.enableTLSPassthrough }}
-          - -enable-snippets={{ .Values.controller.enableSnippets }}
           - -enable-preview-policies={{ .Values.controller.enablePreviewPolicies }}
 {{- if .Values.controller.globalConfiguration.create }}
           - -global-configuration=$(POD_NAMESPACE)/{{ include "nginx-ingress.name" . }}
@@ -154,4 +161,7 @@ spec:
           - -ready-status={{ .Values.controller.readyStatus.enable }}
           - -ready-status-port={{ .Values.controller.readyStatus.port }}
           - -enable-latency-metrics={{ .Values.controller.enableLatencyMetrics }}
+{{- if .Values.controller.initContainers }}
+      initContainers: {{ toYaml .Values.controller.initContainers | nindent 8 }}
+{{- end }}
 {{- end }}
