--- a/charts/nginx-ingress/values.yaml
+++ b/charts/nginx-ingress/values.yaml
@@ -17,6 +17,19 @@ controller:
     ## Enable the App Protect module in the Ingress Controller.
     enable: false
 
+  ## Support for App Protect Dos
+  appprotectdos:
+    ## Enable the App Protect Dos module in the Ingress Controller.
+    enable: false
+    ## Enable debugging for App Protect Dos.
+    debug: false
+    ## Max number of nginx processes to support.
+    maxWorkers: 0
+    ## Max number of ADMD instances.
+    maxDaemons: 0
+    ## RAM memory size to consume in MB.
+    memory: 0
+
   ## Enables the Ingress controller pods to use the host's network namespace.
   hostNetwork: false
 
@@ -34,7 +47,7 @@ controller:
     repository: nginx/nginx-ingress
 
     ## The tag of the Ingress controller image.
-    tag: "2.0.0"
+    tag: "2.1.1"
 
     ## The pull policy for the Ingress controller image.
     pullPolicy: IfNotPresent
@@ -67,15 +80,15 @@ controller:
     secret:
 
   wildcardTLS:
-    ## The base64-encoded TLS certificate for every Ingress host that has TLS enabled but no secret specified.
-    ## If the parameter is not set, for such Ingress hosts NGINX will break any attempt to establish a TLS connection.
+    ## The base64-encoded TLS certificate for every Ingress/VirtualServer host that has TLS enabled but no secret specified.
+    ## If the parameter is not set, for such Ingress/VirtualServer hosts NGINX will break any attempt to establish a TLS connection.
     cert: ""
 
-    ## The base64-encoded TLS key for every Ingress host that has TLS enabled but no secret specified.
-    ## If the parameter is not set, for such Ingress hosts NGINX will break any attempt to establish a TLS connection.
+    ## The base64-encoded TLS key for every Ingress/VirtualServer host that has TLS enabled but no secret specified.
+    ## If the parameter is not set, for such Ingress/VirtualServer hosts NGINX will break any attempt to establish a TLS connection.
     key: ""
 
-    ## The secret with a TLS certificate and key for every Ingress host that has TLS enabled but no secret specified.
+    ## The secret with a TLS certificate and key for every Ingress/VirtualServer host that has TLS enabled but no secret specified.
     ## The value must follow the following format: `<namespace>/<name>`.
     ## Used as an alternative to specifying a certificate and key using `controller.wildcardTLS.cert` and `controller.wildcardTLS.key` parameters.
     ## Format: <namespace>/<secret_name>
@@ -113,6 +126,12 @@ controller:
   # - name: extra-conf
   #   mountPath: /etc/nginx/conf.d/extra.conf
   #   subPath: extra.conf
+
+  ## InitContainers for the Ingress controller pods.
+  initContainers: []
+  # - name: init-container
+  #   image: busybox:1.34
+  #   command: ['sh', '-c', 'echo this is initial setup!']
 
   ## The number of replicas of the Ingress controller deployment.
   replicaCount: 1
@@ -155,7 +174,7 @@ controller:
       #   port: 5353
       #   protocol: TCP
 
-  ## Enable custom NGINX configuration snippets in VirtualServer, VirtualServerRoute and TransportServer resources.
+  ## Enable custom NGINX configuration snippets in Ingress, VirtualServer, VirtualServerRoute and TransportServer resources.
   enableSnippets: false
 
   ## Add a location based on the value of health-status-uri to the default server. The location responds with the 200 status code for any request.
